Delete modal, tidy up actiontip Coffeescript, fix collapse code

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -11,6 +11,25 @@
 .edit-video
   margin-bottom: 5px
 
+.delete-modal
+  display: none
+  .modal-footer
+    padding: 0 20px 0 0
+  .modal-header 
+    background-color: #e0e0e0
+    border-top-left-radius: 6px
+    border-top-right-radius: 6px
+    padding: 15px 20px
+    h4
+      font-size: 20px
+      font-weight: bold
+      padding-left: 0
+  .modal-body
+    font-size: 16px
+  .delete-success
+    display: none
+
+
 h1
   margin-bottom: 1em
 
@@ -150,22 +169,30 @@ a
   display: inline-block
   padding: 4px 15px
   background-color: black
-  color: white
   text-align: center
   text-decoration: none
+  margin-top: 25px
+  margin-bottom: 25px
+  margin-left: 25px
+  padding-right: 25px
+  padding-left: 25px
+  border-radius: 3px
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
+  font-size: 15px
+  line-height: 24px
+  font-weight: 500
+  letter-spacing: 0px
+  &.cancel
+    background-color: #dddddd
+    color: #333333
+  &:hover.cancel:hover
+    background-color: #cccccc
+    box-shadow: #999999 0px 0px 8px 0px inset
+    color: #333333
+    text-decoration: none
   &.primary
-    margin-top: 25px
-    margin-bottom: 25px
-    margin-left: 25px
-    padding-right: 25px
-    padding-left: 25px
-    border-radius: 3px
+    color: white
     background-color: #ff4f00
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
-    font-size: 15px
-    line-height: 24px
-    font-weight: 500
-    letter-spacing: 0px
   &:hover.primary:hover
     background-color: #ed4b00
     box-shadow: #cc4202 0px 0px 8px 0px inset
